SWAGGER를 사용한 API 문서화 기능 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,6 @@ logging:
 spring:
   messages:
     basename: messages # 다국어 처리 파일 이름
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
