spring security를 사용하여 인증된 사용자만 API 호출할 수 있도록 제어

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,9 +8,11 @@ logging:
 spring:
   messages:
     basename: messages # 다국어 처리 파일 이름
-  mvc:
-    pathmatch:
-      matching-strategy: ant_path_matcher
+
+  security:
+    user:
+      name: username
+      password: passw0d
 
 
 matching-strategy=ant_path_matcher:
