--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,16 +6,23 @@ logging:
     org.springframework: DEBUG # 로깅 레벨
 
 spring:
+  jpa:
+    show-sql: true # SQL 실행을 로그로 출력, 개발 과정중 유용
+#    generate-ddl: true
+#    hibernate:
+#      ddl-auto: update
+    defer-datasource-initialization: true
   messages:
     basename: messages # 다국어 처리 파일 이름
-
   security:
     user:
       name: username
       password: passw0d
-
-jpa:
-  show-sql: true # SQL 실행을 로그로 출력, 개발 과정중 유용
+  datasource: # jpa 테스트용 메모리 DB 생성
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password:
 
 h2:
   console:
